--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,3 +6,7 @@
 
 // Import fontawesome
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+// Import other files
+@import "./general";
+@import "./theheader";
