--- a/src/assets/scss/_theheader.scss
+++ b/src/assets/scss/_theheader.scss
@@ -2,6 +2,7 @@
 
 nav {
     font-family: 'Work Sans', sans-serif;
+    font-size: 14px;
 
     .cdUserNav {
         padding: 15px;
@@ -34,6 +35,7 @@ nav {
     
     .cdMenuNav {
         border-bottom: 1px solid #eeeeee;
+        font-weight: 600;
     }
 
 }
