--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -2,3 +2,11 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+h6 {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 14px;
+    letter-spacing: 2px;
+    font-weight: 600;
+    text-transform: uppercase;
+}
