--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -3,10 +3,35 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+// Typography
+
+h1 {
+    font-family: 'Trocchi', serif;
+    font-size: 50px;
+    font-weight: 400;
+    line-height: 70px;
+}
+
 h6 {
     font-family: 'Work Sans', sans-serif;
     font-size: 14px;
     letter-spacing: 2px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+// Buttons
+
+.btn {
+    border-radius: 20px;
+    display: inline-block;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 10px 30px;
+    border: none;
+
+    &:hover.btn-light {
+        background-color: #496E46;
+        color: #ffffff;
+    }
 }
