--- a/src/assets/scss/_jumbohero.scss
+++ b/src/assets/scss/_jumbohero.scss
@@ -7,16 +7,16 @@
 }
 
 .cdHero {
-    min-height: 70vh;
+    min-height: $headerHeight;
     background-image: url('@/assets/img/banner-5-2x-scaled.jpg');
     background-size: cover;
 
     .cdHeroOverlay {
-        min-height: 70vh;
+        min-height: $headerHeight;
         background-color: rgba($color: #000000, $alpha: .3);
 
         .cdHeroWrapper {
-            min-height: 70vh;
+            min-height: $headerHeight;
         }
     }
 }
