--- a/src/assets/scss/_theheader.scss
+++ b/src/assets/scss/_theheader.scss
@@ -6,6 +6,7 @@ nav {
         padding: 15px;
         border-bottom: 1px solid #eeeeee;
         font-family: 'Work Sans', sans-serif;
+        background-color: #ffffff;
     
         .cdInputGroup {
             width: 80%;
