--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -12,12 +12,26 @@ h1 {
     line-height: 70px;
 }
 
+h2 {
+    font-family: 'Trocchi', serif;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 45px;
+}
+
 h6 {
     font-family: 'Work Sans', sans-serif;
     font-size: 14px;
     letter-spacing: 2px;
     font-weight: 600;
     text-transform: uppercase;
+}
+
+p {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
 }
 
 // Buttons
