--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -19,6 +19,13 @@ h2 {
     line-height: 45px;
 }
 
+h4 {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
 h6 {
     font-family: 'Work Sans', sans-serif;
     font-size: 14px;
