--- a/src/assets/scss/_categorycard.scss
+++ b/src/assets/scss/_categorycard.scss
@@ -7,3 +7,15 @@
         width: 90%;
     }
 }
+
+.cdCategoryCardInfo {
+
+    a {
+        text-decoration: none;
+
+        h4:hover {
+            color: $primary;
+        }
+    }
+
+}
