--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -55,4 +55,8 @@ p {
         background-color: $tertiary;
         color: #ffffff;
     }
+
+    &.btn-dark {
+        background-color: $tertiary;
+    }
 }
