Completed Shop Card Component

--- a/src/assets/scss/_shopcard.scss
+++ b/src/assets/scss/_shopcard.scss
@@ -15,4 +15,9 @@
     .cdShopCardImg {
         width: 60%;
     }
+
+    &:hover {
+        transform: scale(103%);
+        transition: transform .2s linear;
+    }
 }
