--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -60,3 +60,10 @@ p {
         background-color: $tertiary;
     }
 }
+
+// Overlay
+.cdOverlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: #000000, $alpha: .3);
+}
