--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -26,6 +26,13 @@ h4 {
     line-height: 28px;
 }
 
+h5 {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+}
+
 h6 {
     font-family: 'Work Sans', sans-serif;
     font-size: 14px;
