--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -74,3 +74,28 @@ p {
     height: 100%;
     background-color: rgba($color: #000000, $alpha: .3);
 }
+
+// Input
+
+.cdInputGroup {
+    width: 80%;
+
+    .cdInputGroupIcon {
+        border-top-left-radius: 50px;
+        border-bottom-left-radius: 50px;
+        border: none;
+        background-color: #F3F4F3;
+
+        .fa-magnifying-glass {
+            font-size: 0.7rem;
+        }
+    }
+
+    .cdInputGroupText {
+        border: none;
+        border-top-right-radius: 50px;
+        border-bottom-right-radius: 50px;
+        background-color: #F3F4F3;
+    }
+
+}
