--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,3 +18,6 @@
 @import "./categorycard";
 @import "./shopcard";
 @import "./bestsellers";
+@import "./newarrivals";
+@import "./joinnewsletter";
+@import "./shopitem";
