--- a/src/assets/scss/_general.scss
+++ b/src/assets/scss/_general.scss
@@ -66,6 +66,10 @@ p {
     &.btn-dark {
         background-color: $tertiary;
     }
+
+    &:hover.btn-dark {
+        background-color: $primary;
+    }
 }
 
 // Overlay
