--- a/src/assets/scss/_shopusps.scss
+++ b/src/assets/scss/_shopusps.scss
@@ -1,4 +1,5 @@
 .cdShopUspContainer {
     background-color: $primary;
     background-image: url('@/assets/img/bg-transparent-3.png');
+    background-repeat: repeat-x;
 }
