--- a/src/assets/scss/_shopitem.scss
+++ b/src/assets/scss/_shopitem.scss
@@ -2,9 +2,36 @@
     width: 100%;
     aspect-ratio: 1/1;
     background-color: $secondary;
+    position: relative;
+
+    &:hover .cdShopItemOverlay {
+        visibility: visible;
+    }
+
+    .cdShopItemOverlay {
+        visibility: hidden;
+        background-color: rgba($color: #000000, $alpha: .3);
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+
+        .cdShopItemOverlayRound {
+            background-color: rgba($color: #000000, $alpha: .7);
+            padding: 20px;
+            border-radius: 50%;
+        }
+    }
 
     img {
         width: 100%;
+    }
+
+    a {
+        text-decoration: none;
     }
 
 }
