--- a/src/assets/scss/_blogitem.scss
+++ b/src/assets/scss/_blogitem.scss
@@ -1,9 +1,37 @@
 .cdBlogItemImg {
+    position: relative;
 
     img {
         width: 100%;
         aspect-ratio: 1/1;
     }
+
+    &:hover .cdBlogItemImgOverlay {
+        visibility: visible;
+    }
+
+    .cdBlogItemImgOverlay {
+        visibility: hidden;
+        background-color: rgba($color: #000000, $alpha: .3);
+        width: 100%;
+        aspect-ratio: 1/1;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        font-family: 'Work Sans', sans-serif;
+        padding: 30px;
+
+        .cdBlogItemCategory {
+            font-size: 12px;
+        }
+
+        a {
+            text-decoration: none;
+        }
+    }
+
 }
 
 .cdBlogItemInfo {
