--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,11 +16,9 @@
 @import "./theheader";
 @import "./jumbohero";
 @import "./categorycard";
-@import "./shopcard";
-@import "./bestsellers";
-@import "./newarrivals";
+@import "./shopcarditem";
+@import "./userstestimonialsitem";
 @import "./joinnewsletter";
 @import "./shopitem";
 @import "./blogitem";
-@import "./shopbox";
 @import "./footer";
